--- a/RHSkillEditor/RHSkillEditor.csproj
+++ b/RHSkillEditor/RHSkillEditor.csproj
@@ -110,6 +110,7 @@
     <Compile Include="ImageImporter.Designer.cs">
       <DependentUpon>ImageImporter.cs</DependentUpon>
     </Compile>
+    <Compile Include="OrphanSkill.cs" />
     <Compile Include="Readme.cs">
       <SubType>Form</SubType>
     </Compile>
